<resources>
    <string name="app_name">Pet Store</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="start_toolbar">Welcome to Animal\'s House</string>

    <!-- Strings related to login -->
    <string name="login_toolbar">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to main -->
    <string name="action_settings">Settings</string>
    <string name="add_Pet">Add Pet</string>
    <string name="list_Pet">List PET</string>
    <string name="backdrop_title">PET KINGDOM</string>
    <string name="backdrop_subtitle">Where humans are only servants</string>
    <string name="vaccination">Vaccination</string>
    <string name="price">Price</string>
    <string name="health">Health</string>
    <string name="weight">Weight</string>
    <string name="kind">Kind PET</string>
    <string name="id">ID</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="injected">Injected</string>
    <string name="uninjected">Not Injected</string>

</resources>
