<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.anhtu.tuna.petmanager.EditPET">

    <ImageView
        android:id="@+id/imgAnh"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/imagespet"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/id"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/tvID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/weight"
            android:gravity="left|center"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/edWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/health"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:id="@+id/edHealth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/vaccination"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rboYes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/injected"
                android:layout_margin="3dp" />

            <RadioButton
                android:id="@+id/rboNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/uninjected"
                android:layout_margin="3dp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/price"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:id="@+id/edPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:inputType="number" />
    </LinearLayout>
</LinearLayout>