<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.anhtu.tuna.petmanager.AddDogActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="-10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/outthempet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:onClick="out"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="Add DOG"
                android:textColor="#fff"
                android:textSize="22sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/adddog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/id"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:id="@+id/edID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/kind"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <Spinner
            android:id="@+id/spinLoai"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/weight"
            android:gravity="left|center"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/edWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/health"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <Spinner
            android:id="@+id/spinHealth"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/vaccination"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rboYes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/injected"
                android:layout_margin="3dp" />

            <RadioButton
                android:id="@+id/rboNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/uninjected"
                android:layout_margin="3dp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/price"
            android:gravity="left|center"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:id="@+id/edPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>